@@ -1,3 +1,9 @@
+2005-04-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (ExpandXotcl): allow for xotcl method name expansion,
+	if you change ::tkcon::OPT(expandorder) to include Xotcl before
+	Procname
+
 2005-02-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (::send::send): propagate -displayof to winfo interps
